--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "marquee.widgets.npm-stats.packageNames": ["smart-brain-api"],
-  "cSpell.words": ["holmydick", "Retsu", "signin"]
+  "cSpell.words": ["Clarifai", "holmydick", "imageurl", "Retsu", "signin"]
 }
